# gtn

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  autograd.h  utils.cpp  utils.h
.circleci/: config.yml
benchmarks/: CMakeLists.txt  ctc.cpp  ctc_batched.cpp  functions.cpp  graph.cpp  parallel.cpp  time_utils.h
bindings/python/: CMakeCache.txt  CMakeLists.txt  Manifest.in  README.md  setup.py
bindings/python/benchmarks/: parallel.py  time_utils.py
bindings/python/examples/: linear_crf.py  pytorch_loss.py  simple_graph.py  word_decompositions.py
bindings/python/gtn/: __init__.py  _autograd.cpp  _creations.cpp  _functions.cpp  _graph.cpp  _parallel.cpp  _rand.cpp  _torch.cpp  _utils.cpp  autograd.py  functions.py  graph.py  torch.py  utils.py
bindings/python/test/: test_autograd.py  test_bindings.py  test_creations.py  test_criterions.py  test_functions.py  test_helpers.py  test_utils.py
bindings/python/tests/: criterion_test.py
cmake/: Buildpybind11.cmake  FindOpenMP.cmake  FindPythonLibsNew.cmake  gtnConfig.cmake.in  pybind11Config.cmake  pybind11Tools.cmake
docs/: Doxyfile  README.md
docs/cpp/: Doxyfile
docs/cpp/source/: autograd.rst  autograd_basics.rst  basic_usage.rst  common_functions.rst  conf.py  creations.rst  functions.rst  graph.rst  index.rst  install.rst  utils.rst
docs/python/source/: conf.py  graph.rst  gtn.rst  index.rst  install.rst
docs/source/: autograd.rst  autograd_basics.rst  common_functions.rst  conf.py  creations.rst  functions.rst  index.rst  install.rst  parallel.rst  pytorch.rst
docs/source/python/: graph.rst  gtn.rst  install.rst
examples/: CMakeLists.txt  asg.cpp  count_ngrams.cpp  ctc.cpp  edit_distance.cpp  learned_decompositions.cpp  priors.cpp  tutorial.cpp
examples/notebooks/: linear_crf.ipynb  quick-start.ipynb
experimental/: CMakeLists.txt  converters.cpp  parallel_compose.cpp  parallel_compose.cu  parallel_compose.h  prefix_scan.cpp  prefix_scan.h  test_parallel_compose.cpp
gtn/: CMakeLists.txt  autograd.cpp  autograd.h  compose.cpp  compose.h  conversions.cpp  conversions.h  creations.cpp  creations.h  functions.cpp  functions.h  graph.cpp  graph.h  gtn.h  parallel.h  rand.cpp  rand.h  shortest.cpp  shortest.h  utils.cpp  utils.h
gtn/common/: conversions.cpp  conversions.h
gtn/functions/: compose.cpp  compose.h  shortest.cpp  shortest.h
gtn/parallel/: parallel_map.cpp  parallel_map.h  thread_pool.h
test/: CMakeLists.txt  autograd_test.cpp  conversions_test.cpp  creations_test.cpp  criterion_test.cpp  functions_test.cpp  graph_test.cpp  parallel_test.cpp  rand_test.cpp  utils_test.cpp
